tree-optimization/97357 - avoid abnormals in loop splitting conditions

This avoids abnormals in another place.

2020-10-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/97357
	* tree-ssa-loop-split.c (ssa_semi_invariant_p): Abnormal
	SSA names are not semi invariant.

	* gcc.dg/pr97357.c: New testcase.